--- a/index1.html
+++ b/index1.html
@@ -51,7 +51,7 @@
 
     <footer>
         <div class="footer">
-            fashion.All rights reserved 
+            fashion.All rights reserved mmmm
         </div>
     </footer>
     </footer>
